@@ -1,5 +1,6 @@
 - Improvement: added a3es instance automatic initialization
-- Fix: Calculation of teaching hours for A3es process is now based on competence course load 
+- Fix: Calculation of teaching hours for A3es process is now based on competence course load
+- Fix: unaligned coluns when exporting A3es teacher processes to excel 
 - Refactor: moved legal settings a3es url to a3es specific configuration 
 
 2.7.1 (16-10-2019)
